src/pj/poco/test/neg/NFUNCVAR.POC
/* Test using a function as an integer */
#pragma poco echo "expect>cannot do pointer<->number conversion"

int isafunc()
{
return 10;
}

main()
{
if (isafunc == 10)
	puts("strange coincedence");
puts("I shouldn't compile");
}
